# serverless-rust

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
backend/src/: main.rs
benchmark/: aws.yml  benchmark.yml
infrastructure/: package-lock.json  package.json
infrastructure/lib/: cdk-stack.ts
src/: error.rs  main.rs
src/handlers/: person.rs
src/models/: person.rs
